# redhat-star-wars

./: Makefile  README.md  docker-compose.yml  pyproject.toml
redhat_star_wars/: _database.py  _settings.py  _swapi.py  task_one.py
tests/: test_swapi.py
tests/cassettes/: test_json_dict_is_returned_when_fetching_characters_by_id.yaml
tests/integration/: test_db.py
tests/unit/: test_swapi.py  test_task_one.py
tests/unit/cassettes/: test_all_random_ids_lack_details.yaml  test_character_count_is_based_from_api_data.yaml  test_characters_detail_not_found_raises_exception.yaml  test_output_matches_expected_shape.yaml
