[tool.poetry]
name = "redhat-star-wars"
version = "0.1.0"
description = "Technical Assessment for role of Data Engineer at RedHat"
authors = ["Kevin Tindall <kevinkjt2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
