[tool.poetry]
name = "redhat-star-wars"
version = "0.1.0"
description = "Technical Assessment for role of Data Engineer at RedHat"
authors = ["Kevin Tindall <kevinkjt2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
mysql-connector-python = "^8.0.22"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
